crates/squealy/tests/compile_fail/case_aggregate_condition_is_aggregate.stderr
error[E0277]: the trait bound `(ColumnRef<'_, UserName>, Expr<'_, i64, squealy::CaseExprAst<squealy::CaseWhen<squealy::ComparePredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::LiteralExprAst<i64>>, squealy::LiteralExprAst<i64>, squealy::CaseNil>, squealy::LiteralExprAst<i64>>>): squealy::ProjectionClass` is not satisfied
  --> tests/compile_fail/case_aggregate_condition_is_aggregate.rs:21:48
   |
21 |     let _query = TestConnection.from::<User>().select(|(user,)| {
   |                                                ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `squealy::ProjectionClass` is not implemented for `(ColumnRef<'_, UserName>, Expr<'_, i64, squealy::CaseExprAst<squealy::CaseWhen<squealy::ComparePredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::LiteralExprAst<i64>>, squealy::LiteralExprAst<i64>, squealy::CaseNil>, squealy::LiteralExprAst<i64>>>)`
   = help: the following other types implement trait `squealy::ProjectionClass`:
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and $N others
   = note: required for `Ungrouped` to implement `squealy::ValidSelect<(ColumnRef<'_, UserName>, Expr<'_, i64, squealy::CaseExprAst<squealy::CaseWhen<squealy::ComparePredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::LiteralExprAst<i64>>, squealy::LiteralExprAst<i64>, squealy::CaseNil>, squealy::LiteralExprAst<i64>>>), OrderNone>`
note: required by a bound in `squealy::SourceQuery::select`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   |     fn select<P, Indices>(
   |        ------ required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
